--- a/src/templates/createPost.html
+++ b/src/templates/createPost.html
@@ -1,7 +1,8 @@
 <section ng-controller="UploadController as upload">
   <form novalidate ng-submit="createPost.create()">
     <input type="text" placeholder="Title" ng-model="createPost.post.title">
-    <input type="text" placeholder="Location" ng-model="createPost.post.latlng">
+    <input type="text" placeholder="Lat" ng-model="createPost.post.latlng.lat">
+    <input type="text" placeholder="Lng" ng-model="createPost.post.latlng.lng">
     <drag-drop base64="createPost.post.base64" src="createPost.post.image"></drag-drop>
     <div ta-toolbar="[['h1','h2','h3'],['bold','italics']]" text-angular ng-model="createPost.post.bodyText"></div>
     <button>Submit</button>
