--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -24,7 +24,7 @@
   </div>
   <toggle is-active="login.isActive" first-value="Feed" second-value="Map"></toggle>
 
-  <create-post></create-post>
+  <create-post ng-if="!userShow.profileIsCurrentUser || !login.isActive"></create-post>
 
 
   <div class="contentSection">
@@ -34,7 +34,7 @@
       </div>
       <div ng-if="login.isActive" class="mapView">
         <section>
-          <google-map posts="profileFeed.feed"></google-map>
+          <google-map posts="profileFeed.all"></google-map>
         </section>
       </div>
     </div>
