--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -203,6 +203,14 @@ body {
         p{
           font-family: cordalight, serif;
         }
+        .socialContainer{
+          @include display(flex);
+          @include justify-content(space-between);
+          @include align-items(center);
+          padding: 0 50px 20px;
+          height: 50px;
+          width: 100%;
+        }
       }
     }
     .bodyTextInputBox{
