--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -34,7 +34,7 @@
 
 
   <div id="group5" class="parallax__group">
-      <div class="parallax__layer parallax__layer--base" style="background-image:url('../assets/images/sunset.jpg')">
+      <div class="parallax__layer parallax__layer--base" style="background-image:url('../assets/images/water.jpg')">
       <div class="title">Goodbye....Thanks to our sponsors and put it in your back pocket.</div>
       </div>
     </div>
