--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -81,12 +81,14 @@ a{
   color: #fff;
   background-color: #3b5998;
   border-color: rgba(0,0,0,0.2);
+  width: 220px;
 }
 .btn-instagram {
   color: #fff;
   background-color: #3f729b;
   border-color: rgba(0,0,0,0.2);
   margin-top: 20px;
+  width: 220px;
 
 }
 button {
@@ -108,12 +110,13 @@ button {
   border: none;
   border-bottom: 1.5px $main-teal solid;
 }
-
-
-#id {
-  padding: 20px;
+.showPage {
   text-align: center;
-  background-color: pink;
+  border: none;
+  background-color: white;
+  body {
+    background-color: white !important;
+  }
 }
 
 header {
